# layers

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  ENFORCEMENT.md  LAYERS_POST_CORE_ROADMAP.md  LICENSE  README.md  claude-gitnexus-subtrack-plan.md  claude-layers-core-closure-plan.md  claude-layers-core-closure-task.txt  claude-layers-v2-architecture-task.txt  claude-layers-v2-architecture.md  claude-phase3-eval-task.txt  claude-phase4-plan.md  codex-continue-refactor-task-2.txt  codex-continue-refactor-task.txt  codex-curated-ingest-summary.md  codex-curated-ingest-task.txt  codex-layers-v2-architecture-summary.md  codex-layers-v2-architecture-task.txt  codex-layers-v2-architecture.md  codex-phase1-task.txt  codex-phase2-task.txt  codex-phase3-close-summary.md  codex-phase3-close-task.txt  codex-phase3-summary.md  codex-phase3-task.txt  codex-polish-task.txt  codex-project-manager-plan.md  repo-doctor.sh
.council/implement-route-correction-feedback-loop-wiring-in-layers--the-g/: stage0-framing-prompt.txt  stage0-framing.md  task.txt
.council/implement-route-correction-feedback-loop-wiring-in-layers--the-g/stage1-brainstorm/: claude-contribute-prompt.txt  claude-contribute.md  codex-contribute-prompt.txt  codex-contribute.md  codex-contribute.stderr  gemini-seed-prompt.txt  gemini-seed.md  gemini-synthesis-prompt.txt  gemini-synthesis.md
.council/implement-route-correction-feedback-loop-wiring-in-layers--the-g/stage2-round1/: claude-critique-prompt.txt  claude-critique.json  codex-revision-prompt.txt  gemini-critique-prompt.txt  gemini-critique.json  gemini-critique.md
.github/workflows/: ci.yml
.proveit/: README.md
.proveit/manifests/: layers-critical-path-routing.toml  layers-route-quality-weighting.toml  session-liveness-monitor.toml
benchmarks/: routing-answer-keys.jsonl  routing-failures.jsonl
crates/layers-channels/: Cargo.toml
crates/layers-channels/src/: discord.rs  lib.rs  manager.rs  stdio.rs  telegram.rs  types.rs  webchat.rs
crates/layers-core/: Cargo.toml
crates/layers-core/src/: config.rs  error.rs  lib.rs  traits.rs  types.rs
crates/layers-council/: Cargo.toml
crates/layers-council/src/: lib.rs
crates/layers-daemon/: Cargo.toml
crates/layers-daemon/src/: cron_scheduler.rs  gateway.rs  heartbeat.rs  hooks.rs  lib.rs  lifecycle.rs
crates/layers-mcp/: Cargo.toml
crates/layers-mcp/src/: client.rs  lib.rs  server.rs
crates/layers-plugins/: Cargo.toml
crates/layers-plugins/src/: lib.rs
crates/layers-proveit/: Cargo.toml
crates/layers-proveit/src/: lib.rs
crates/layers-providers/: Cargo.toml
crates/layers-providers/src/: anthropic.rs  capabilities.rs  factory.rs  google.rs  lib.rs  openai.rs  registry.rs  token_accounting.rs  tokenizer_impl.rs  types.rs
crates/layers-runtime/: Cargo.toml
crates/layers-runtime/src/: agent_loop.rs  context.rs  failover.rs  lib.rs  queue.rs  session.rs  streaming.rs  subagent.rs  system_prompt.rs  tool_dispatch.rs
crates/layers-store/: Cargo.toml
crates/layers-store/src/: config.rs  jsonl.rs  lancedb_store.rs  lib.rs  sqlite.rs
crates/layers-store/src/migrations/: v001.sql
crates/layers-tools/: Cargo.toml
crates/layers-tools/src/: cron.rs  exec.rs  fs.rs  lib.rs  loop_detection.rs  media.rs  memory.rs  registry.rs  sessions.rs  subagents.rs  web.rs
docs/: cli.md  codex-next-steps.md  data-model.md  development.md  faq.md  index.md  release-readiness.md  technician-architecture.md  uc-contract.md  walkthrough.md
docs/architecture/: 001-unified-data-layer.md  002-circuit-breaker-api-limit.md  003-council-session-resume.md  004-council-agent-registry.md
docs/archive/internal/: README.md  claude-curated-memory-plan.md  claude-curated-memory-task.txt  claude-gitnexus-subtrack-task.txt  claude-phase3-completion-plan.md  claude-phase3-evaluation.md  claude-phase4-task.txt  claude-refactor-plan.md  claude-refactor-task.txt  codex-execute-top4-task.txt  codex-layers-core-closure-plan.md  codex-layers-core-closure-summary.md  codex-layers-core-closure-task.txt
docs/rfcs/: RFC-007-rlef-dispatch-openrouter-oauth.md
hooks/: pre-commit  pre-push
hooks/session-start/: test-integration.sh
memoryport/: council-plans.jsonl  curated-memory.jsonl
memoryport/sentry/: sentry-monitoring.jsonl
memoryport/telemetry/: events.jsonl
notes/archive/: codex-phase1-summary.md  codex-phase3-midphase-summary.md  codex-polish-summary.md  codex-project-manager-progress.md  codex-project-manager-task.txt  codex-refactor-progress.md  codex-refactor-review-task.txt  codex-refactor-verdict.md  codex-review-task.txt  distilled-memory-import.jsonl  gemini-gitnexus-leverage-task.txt  gemini-phase5-plan.md  gemini-phase5-task.txt
src/: blob.rs  commands.rs  config.rs  council.rs  critical_path.rs  feedback.rs  graph.rs  lib.rs  main.rs  memory.rs  projects.rs  proveit_main.rs  quality.rs  router.rs  routing.rs  synthesis.rs  test_support.rs  types.rs  uc.rs  util.rs
src/cmd/: chat.rs  config_cmd.rs  council.rs  curated.rs  feedback.rs  gate.rs  infrastructure.rs  init.rs  mod.rs  monitor.rs  project.rs  query.rs  refresh.rs  remember.rs  task.rs  technician.rs  telemetry.rs  validate.rs
src/council/: artifacts.rs  circuit_breaker.rs  convergence.rs  mod.rs  route_corrections.rs  stage.rs  topology.rs
src/infrastructure/: webhook_relay_worker.js  wrangler.toml
src/memory_index/: mod.rs  pipeline.rs  retrieval.rs  store.rs  types.rs
src/plugins/: mod.rs
src/plugins/rlef/: coulomb.rs  mod.rs  selection.rs
src/plugins/sentry/: mod.rs  repair.rs  schema.rs
src/plugins/telemetry/: aggregator.rs  mod.rs  schema.rs
src/proveit/: artifact_store.rs  git.rs  manifest.rs  mod.rs  runner.rs  service.rs  types.rs
src/provider/: accounting.rs  mod.rs  tokenizer.rs
src/technician/: mod.rs
src/technician/data/: mod.rs
src/technician/detection/: mod.rs
src/technician/escalation/: mod.rs
src/technician/learning/: memoryport.rs  mod.rs
src/technician/repair/: mod.rs
tests/: prove_it_sprint.rs  proveit_cli.rs  repair.rs  uc_semantic_retrieval_e2e.rs
(+8 files in other folders)
