[package]
name = "layers"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

authors = ["Caelator + OpenClaw"]
description = "Council orchestrator and memory spine for multi-model AI workflows"
license = "MIT"
readme = "README.md"
repository = "https://github.com/caelator/layers"
keywords = ["cli", "memory", "code-intelligence", "gitnexus", "local-first"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
libc = "0.2"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
uuid = { version = "1", features = ["v4", "serde"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
ureq = "2"  # HTTP client for Sentry API
wait-timeout = "0.2"
substrate = { path = "../substrate" }
sha2 = "0.10"
globset = "0.4"
toml = "0.8"

[features]
integration = []

[dev-dependencies]
libc = "0.2"
tempfile = "3"

[[bin]]
name = "session-monitor"
path = "src/bin/session_monitor.rs"

[[bin]]
name = "proveit"
path = "src/proveit_main.rs"

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
all = "deny"
pedantic = "deny"
