[workspace]
members = ["crates/*", "."]

[workspace.dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
dirs = "5"
globset = "0.4"
libc = "0.2"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tempfile = "3"
toml = "0.8"
ureq = "2"
uuid = { version = "1", features = ["v4", "serde"] }
wait-timeout = "0.2"

[package]
name = "layers"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

authors = ["Caelator + OpenClaw"]
description = "Council orchestrator and memory spine for multi-model AI workflows"
license = "MIT"
readme = "README.md"
repository = "https://github.com/caelator/layers"
keywords = ["cli", "memory", "code-intelligence", "gitnexus", "local-first"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
dirs.workspace = true
libc.workspace = true
serde.workspace = true
serde_json.workspace = true
layers-core = { path = "crates/layers-core" }
layers-council = { path = "crates/layers-council" }
layers-plugins = { path = "crates/layers-plugins" }
layers-proveit = { path = "crates/layers-proveit" }

[features]
integration = []

[dev-dependencies]
libc.workspace = true
tempfile.workspace = true

[[bin]]
name = "session-monitor"
path = "src/bin/session_monitor.rs"

[[bin]]
name = "proveit"
path = "src/proveit_main.rs"

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
all = "deny"
pedantic = "deny"
