[workspace]
members = [
    "crates/layers-core",
    "crates/layers-store",
    "crates/layers-providers",
    "crates/layers-runtime",
    "crates/layers-tools",
    "crates/layers-channels",
    "crates/layers-mcp",
    "crates/layers-daemon",
]

[package]
name = "layers"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

authors = ["Caelator + OpenClaw"]
description = "Council orchestrator and memory spine for multi-model AI workflows"
license = "MIT"
readme = "README.md"
repository = "https://github.com/caelator/layers"
keywords = ["cli", "memory", "code-intelligence", "gitnexus", "local-first"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
libc = "0.2"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
uuid = { version = "1", features = ["v4", "serde"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
ureq = "2"
lancedb = "0.27"
rusqlite = { version = "0.32", features = ["bundled"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
layers-store = { path = "crates/layers-store" }
layers-daemon = { path = "crates/layers-daemon" }
arrow-array = "57"
arrow-schema = "57"
futures = "0.3"
wait-timeout = "0.2"
substrate = { path = "../substrate" }
dirs = "5"
sha2 = "0.10"
globset = "0.4"
toml = "0.8"

[features]
integration = []

[dev-dependencies]
libc = "0.2"
tempfile = "3"

[[bin]]
name = "session-monitor"
path = "src/bin/session_monitor.rs"

[[bin]]
name = "proveit"
path = "src/proveit_main.rs"

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
all = "deny"
pedantic = "deny"
