[package]
name = "layers-core"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
async-trait = "0.1"
bytes = "1"
tokio = { version = "1", features = ["rt", "sync"] }
tokio-util = "0.7"
futures = "0.3"
