[package]
name = "layers-daemon"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[dependencies]
layers-core = { path = "../layers-core" }
layers-runtime = { path = "../layers-runtime" }
layers-channels = { path = "../layers-channels" }
layers-tools = { path = "../layers-tools" }
layers-mcp = { path = "../layers-mcp" }
