[package]
name = "layers-daemon"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[dependencies]
layers-core = { path = "../layers-core" }
layers-providers = { path = "../layers-providers" }
layers-runtime = { path = "../layers-runtime" }
layers-store = { path = "../layers-store" }
layers-channels = { path = "../layers-channels" }
layers-tools = { path = "../layers-tools" }
layers-mcp = { path = "../layers-mcp" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync", "time", "macros", "signal", "fs"] }
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
async-trait = "0.1"
uuid = { version = "1", features = ["v4"] }
clap = { version = "4", features = ["derive"] }
