[package]
name = "layers-mcp"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[dependencies]
layers-core = { path = "../layers-core" }
layers-tools = { path = "../layers-tools" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "sync", "time", "process", "io-util"] }
tracing = "0.1"
async-trait = "0.1"
uuid = { version = "1", features = ["v4"] }
