[package]
name = "layers-providers"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[dependencies]
layers-core = { path = "../layers-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["rt", "sync", "time", "macros"] }
tokio-util = { version = "0.7", features = ["rt"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
futures = "0.3"
tracing = "0.1"
async-trait = "0.1"
