[package]
name = "layers-store"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[dependencies]
layers-core = { path = "../layers-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["rt", "sync", "fs"] }
rusqlite = { version = "0.32", features = ["bundled"] }
lancedb = "0.27"
arrow-array = "57"
arrow-schema = "57"
futures = "0.3"
anyhow = "1"
tracing = "0.1"
async-trait = "0.1"
toml = "0.8"
sha2 = "0.10"
dirs = "5"
