[package]
name = "layers-tools"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[dependencies]
layers-core = { path = "../layers-core" }
layers-runtime = { path = "../layers-runtime" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync", "time", "macros", "process", "fs", "io-util"] }
tracing = "0.1"
async-trait = "0.1"
uuid = { version = "1", features = ["v4"] }
